"""create products table

Revision ID: 2a58cc9adbe7
Revises: e4fbe9bcffb3
Create Date: 2026-08-30 14:01:19.610410

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '2a58cc9adbe7'
down_revision = 'e4fbe9bcffb3'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('productos',
    sa.Column('id_producto', sa.BigInteger(), autoincrement=True, nullable=False),
    sa.Column('id_categoria', sa.BigInteger(), nullable=False),
    sa.Column('nombre', sa.String(length=150), nullable=False),
    sa.Column('descripcion', sa.Text(), nullable=True),
    sa.Column('precio_minorista', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('precio_mayorista', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('cantidad_minima_mayorista', sa.Integer(), server_default=sa.text('1'), nullable=False),
    sa.Column('stock', sa.Integer(), server_default=sa.text('0'), nullable=False),
    sa.Column('imagen_url', sa.String(length=500), nullable=True),
    sa.Column('activo', sa.Boolean(), server_default=sa.text('true'), nullable=False),
    sa.Column('creado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('actualizado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.CheckConstraint('cantidad_minima_mayorista > 0', name='chk_cantidad_mayorista'),
    sa.CheckConstraint('precio_mayorista >= 0', name='chk_precio_mayorista'),
    sa.CheckConstraint('precio_minorista >= 0', name='chk_precio_minorista'),
    sa.CheckConstraint('stock >= 0', name='chk_stock'),
    sa.ForeignKeyConstraint(['id_categoria'], ['categorias.id_categoria'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id_producto')
    )
    with op.batch_alter_table('productos', schema=None) as batch_op:
        batch_op.create_index('idx_productos_categoria', ['id_categoria'], unique=False)
        batch_op.create_index('idx_productos_nombre', ['nombre'], unique=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('productos', schema=None) as batch_op:
        batch_op.drop_index('idx_productos_nombre')
        batch_op.drop_index('idx_productos_categoria')

    op.drop_table('productos')
    # ### end Alembic commands ###
