"""create roles and users tables

Revision ID: 53480e71752a
Revises: 2a58cc9adbe7
Create Date: 2026-08-30 17:05:16.062389

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '53480e71752a'
down_revision = '2a58cc9adbe7'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('roles',
    sa.Column('id_rol', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nombre', sa.String(length=30), nullable=False),
    sa.Column('descripcion', sa.String(length=255), nullable=True),
    sa.Column('activo', sa.Boolean(), server_default=sa.text('true'), nullable=False),
    sa.Column('creado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.PrimaryKeyConstraint('id_rol'),
    sa.UniqueConstraint('nombre')
    )
    roles_table = sa.table(
            "roles",
            sa.column(
                "nombre",
                sa.String(length=30),
            ),
            sa.column(
                "descripcion",
                sa.String(length=255),
            ),
            sa.column(
                "activo",
                sa.Boolean(),
            ),
        )

    op.bulk_insert(
            roles_table,
            [
                {
                    "nombre": "CLIENTE",
                    "descripcion": "Cliente de la tienda",
                    "activo": True,
                },
                {
                    "nombre": "ADMINISTRADOR",
                    "descripcion": "Administrador del sistema",
                    "activo": True,
                },
            ],
        )
    op.create_table('usuarios',
    sa.Column('id_usuario', sa.BigInteger(), autoincrement=True, nullable=False),
    sa.Column('id_rol', sa.Integer(), nullable=False),
    sa.Column('nombre', sa.String(length=80), nullable=False),
    sa.Column('apellido', sa.String(length=80), nullable=False),
    sa.Column('email', sa.String(length=150), nullable=False),
    sa.Column('password_hash', sa.String(length=255), nullable=False),
    sa.Column('activo', sa.Boolean(), server_default=sa.text('true'), nullable=False),
    sa.Column('creado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('actualizado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['id_rol'], ['roles.id_rol'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id_usuario'),
    sa.UniqueConstraint('email')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('usuarios')
    op.drop_table('roles')
    # ### end Alembic commands ###
