"""create orders and order details tables

Revision ID: 736d03136e41
Revises: bf33b1a8ba1d
Create Date: 2026-09-01 18:06:44.077698

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '736d03136e41'
down_revision = 'bf33b1a8ba1d'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('estados_pedido',
    sa.Column('id_estado_pedido', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nombre', sa.String(length=30), nullable=False),
    sa.Column('descripcion', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('id_estado_pedido'),
    sa.UniqueConstraint('nombre')
    )
    order_statuses_table = sa.table(
        "estados_pedido",
        sa.column(
            "nombre",
            sa.String(length=30),
        ),
        sa.column(
            "descripcion",
            sa.String(length=255),
        ),
    )

    op.bulk_insert(
        order_statuses_table,
        [
            {
                "nombre": "PENDIENTE",
                "descripcion": (
                    "Pedido creado y pendiente de confirmación."
                ),
            },
            {
                "nombre": "CONFIRMADO",
                "descripcion": "Pedido confirmado.",
            },
            {
                "nombre": "EN_PREPARACION",
                "descripcion": "Pedido en preparación.",
            },
            {
                "nombre": "LISTO",
                "descripcion": "Pedido listo para entregar.",
            },
            {
                "nombre": "ENTREGADO",
                "descripcion": "Pedido entregado.",
            },
            {
                "nombre": "CANCELADO",
                "descripcion": "Pedido cancelado.",
            },
        ],
    )
    op.create_table('pedidos',
    sa.Column('id_pedido', sa.BigInteger(), autoincrement=True, nullable=False),
    sa.Column('id_usuario', sa.BigInteger(), nullable=False),
    sa.Column('id_estado_pedido', sa.Integer(), nullable=False),
    sa.Column('fecha_pedido', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('observaciones', sa.Text(), nullable=True),
    sa.Column('actualizado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['id_estado_pedido'], ['estados_pedido.id_estado_pedido'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['id_usuario'], ['usuarios.id_usuario'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id_pedido')
    )
    with op.batch_alter_table('pedidos', schema=None) as batch_op:
        batch_op.create_index('idx_pedidos_estado', ['id_estado_pedido'], unique=False)
        batch_op.create_index('idx_pedidos_usuario', ['id_usuario'], unique=False)

    op.create_table('pedido_detalles',
    sa.Column('id_pedido_detalle', sa.BigInteger(), autoincrement=True, nullable=False),
    sa.Column('id_pedido', sa.BigInteger(), nullable=False),
    sa.Column('id_producto', sa.BigInteger(), nullable=False),
    sa.Column('cantidad', sa.Integer(), nullable=False),
    sa.Column('precio_unitario', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('es_precio_mayorista', sa.Boolean(), server_default=sa.text('false'), nullable=False),
    sa.CheckConstraint('cantidad > 0', name='chk_detalle_cantidad'),
    sa.CheckConstraint('precio_unitario >= 0', name='chk_detalle_precio'),
    sa.ForeignKeyConstraint(['id_pedido'], ['pedidos.id_pedido'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['id_producto'], ['productos.id_producto'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id_pedido_detalle'),
    sa.UniqueConstraint('id_pedido', 'id_producto', name='uq_pedido_producto')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('pedido_detalles')
    with op.batch_alter_table('pedidos', schema=None) as batch_op:
        batch_op.drop_index('idx_pedidos_usuario')
        batch_op.drop_index('idx_pedidos_estado')

    op.drop_table('pedidos')
    op.drop_table('estados_pedido')
    # ### end Alembic commands ###
