"""create carts and cart items tables

Revision ID: bf33b1a8ba1d
Revises: 53480e71752a
Create Date: 2026-08-31 18:55:01.677827

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = 'bf33b1a8ba1d'
down_revision = '53480e71752a'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('carritos',
    sa.Column('id_carrito', sa.BigInteger(), autoincrement=True, nullable=False),
    sa.Column('id_usuario', sa.BigInteger(), nullable=False),
    sa.Column('creado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('actualizado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['id_usuario'], ['usuarios.id_usuario'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id_carrito'),
    sa.UniqueConstraint('id_usuario')
    )
    op.create_table('carrito_items',
    sa.Column('id_carrito_item', sa.BigInteger(), autoincrement=True, nullable=False),
    sa.Column('id_carrito', sa.BigInteger(), nullable=False),
    sa.Column('id_producto', sa.BigInteger(), nullable=False),
    sa.Column('cantidad', sa.Integer(), nullable=False),
    sa.Column('agregado_en', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.CheckConstraint('cantidad > 0', name='chk_carrito_cantidad'),
    sa.ForeignKeyConstraint(['id_carrito'], ['carritos.id_carrito'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['id_producto'], ['productos.id_producto'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id_carrito_item'),
    sa.UniqueConstraint('id_carrito', 'id_producto', name='uq_carrito_producto')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('carrito_items')
    op.drop_table('carritos')
    # ### end Alembic commands ###
